# denigma

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build.cmake
src/classify/: CMakeLists.txt  articulations.cpp  articulations.h  barlines.cpp  chords.cpp  classify.cpp  classify.h  clefs.cpp  clefs.h  dynamics.cpp  dynamics.h  entries.cpp  expressions.cpp  general_lines.cpp  jumps.cpp  jumps.h  keyboard_pedals.cpp  noteheads.cpp  octaves.cpp  smartshapes.cpp
src/core/: CMakeLists.txt  cue_layers.cpp  cue_layers.h  denigma.cpp  denigma.h  finale_options.cpp  finale_options.h  git_commit.cpp.in  musx_reader.h  ottavas.cpp  ottavas.h
src/export/: CMakeLists.txt  enigmaxml.cpp  enigmaxml.h  enigmaxml_converter.cpp  export.cpp  export.h  mnx.cpp  mnx.h  mnx_converter.cpp  mnx_enums.cpp  mnx_formatted_text.cpp  mnx_formatted_text.h  mnx_global.cpp  mnx_layouts.cpp  mnx_mapping.cpp  mnx_mapping.h  mnx_markings.cpp  mnx_markings.h  mnx_parts.cpp  mnx_sequences.cpp  mss.cpp  mss.h  mss_converter.cpp  svg.cpp  svg.h  svg_converter.cpp
src/formats/enigmaxml/: CMakeLists.txt  enigmaxml.cpp  enigmaxml.h  enigmaxml_converter.cpp
src/formats/mnx/: CMakeLists.txt  mnx.cpp  mnx.h  mnx_articulations.cpp  mnx_articulations.h  mnx_converter.cpp  mnx_enums.cpp  mnx_expressions.cpp  mnx_expressions.h  mnx_formatted_text.cpp  mnx_formatted_text.h  mnx_fwd.h  mnx_global.cpp  mnx_layouts.cpp  mnx_mapping.cpp  mnx_mapping.h  mnx_markings.cpp  mnx_markings.h  mnx_parts.cpp  mnx_sequences.cpp  mnx_smartshapes.cpp  mnx_smartshapes.h
src/formats/mss/: CMakeLists.txt  mss.cpp  mss.h  mss_converter.cpp
src/formats/musicxml/: CMakeLists.txt  musicxml.cpp  musicxml.h  musicxml_arpeggios.cpp  musicxml_articulations.cpp  musicxml_converter.cpp  musicxml_defaults.cpp  musicxml_dynamics.cpp  musicxml_enums.cpp  musicxml_expressions.cpp  musicxml_formatted_text.cpp  musicxml_formatted_text.h  musicxml_instruments.cpp  musicxml_jumps.cpp  musicxml_mapping.cpp  musicxml_mapping.h  musicxml_measures.cpp  musicxml_metadata.cpp  musicxml_noteheads.cpp  musicxml_notes.cpp  musicxml_parts.cpp  musicxml_smartshapes.cpp  mx-api-gaps.md  roadmap.md
src/formats/svg/: CMakeLists.txt  svg.cpp  svg.h  svg_converter.cpp
src/massage/: CMakeLists.txt  massage.cpp  massage.h  musicxml.cpp  musicxml.h
src/utils/: CMakeLists.txt  font_names.cpp  font_names.h  mathutils.h  random_access_reader.cpp  score_encoder.h  smufl_support.cpp  smufl_support.h  stringutils.h  textmetrics.cpp  textmetrics.h  utf8_iterator.cpp  utf8_iterator.h  ziputils.cpp  ziputils.h
tests/: CMakeLists.txt  denigmatests.cpp  export.cpp  massage.cpp  options.cpp  test_articulations.cpp  test_barlines.cpp  test_chords.cpp  test_clefs.cpp  test_conversion_result.cpp  test_dynamics.cpp  test_enigmaxml_converter.cpp  test_entries.cpp  test_export.cpp  test_expressions.cpp  test_font_names.cpp  test_general_lines.cpp  test_jumps.cpp  test_logging.cpp  test_massage.cpp  test_mss_converter.cpp  test_noteheads.cpp  test_octave_lines.cpp  test_options.cpp  test_schema.cpp  test_smartshape_lines.cpp  test_smartshapes.cpp  test_svg_converter.cpp  test_typed_converter_options.cpp  test_utils.h  xml_compare.cpp  xml_compare.h
tests/data/inputs/: barline_short_normal.musx  barline_types.musx  beam_workaround.musx  beamovers.musx  chords.musx  clef_changes.musx  cross_staffs.mnx  cross_staffs.musx  enclosures.musx  forced_bass_clef.musx  forced_bass_clef_smufl.musx  grace_beamed.mnx  grace_beamed.musx  grace_indices.musx  harmonics_artificial.musx  indtime_clefchange.musx  keysigs_independent.musx  large_orchestra.musx  meas1_midmeasureclef.musx  measnums_staffoverride.musx  measure_text.musx  multimeas_beam.musx  multimeas_cue.musx  multistaff_inst.musx  notAscii-其れ.musx  notAscii-其れ.mxl  ottava_end_of_bar.musx  ottavas.musx  ottavas_edge.musx  ottavas_simple.musx  pageDiffThanOpts.musicxml  pageDiffThanOpts.musx  piano3staff.musx  rehearsal_marks.musx  repeats.musx  secbeams.musx  slurs_2staves.musx  slurs_2voices.musx  slurs_beatattached.musx  slurs_overbars.musx  (+26 more)
tests/data/inputs/musicxml/: barline-types-ref.musicxml  barline-types.musx  barline_short_normal-ref.musicxml  chords-ref.musicxml  clef_changes-ref.musicxml  cross_staffs-ref.musicxml  enclosures-ref.musicxml  grace_beamed-ref.musicxml  harmonics_artificial-ref.musicxml  indtime_clefchange-ref.musicxml  keysigs_independent-ref.musicxml  large_orchestra-ref.musicxml  measnums_staffoverride-ref.musicxml  measure_text-ref.musicxml  notAscii-其れ.musicxml  ottavas_edge-ref.musicxml  ottavas_simple-massaged.musicxml  ottavas_simple-ref.musicxml  page70-staff82ev-ref.musicxml  page70-staff82ev.musx  page70nohold-staff82ev-ref.musicxml  page70nohold-staff82ev.musx  pipe-organ-musescore-ref.musicxml  pipe-organ-ref.musicxml  pipe-organ.musx  rehearsal_marks-ref.musicxml  repeats-ref.musicxml  slurs_2staves-ref.musicxml  slurs_2voices-ref.musicxml  slurs_beatattached-ref.musicxml  slurs_overbars-ref.musicxml  smartshape_lines-ref.musicxml  techniques-ref.musicxml  tempo_varied_staves-ref.musicxml  termolos_twonotes-ref.musicxml  tie_target_types-ref.musicxml  timesigs_changing-ref.musicxml  timesigs_composite-ref.musicxml  timesigs_independent-ref.musicxml  totpages-ref.musicxml  (+3 more)
tests/data/inputs/reference/: notAscii-其れ.enigmaxml  notAscii-其れ.massaged.musicxml  notAscii-其れ.mss  notAscii-其れ.no-fermata-whole-rests.musicxml  notAscii-其れ.no-refloat-rests.musicxml  notAscii-其れ.オボえ.massaged.musicxml  notAscii-其れ.オボえ.mss  pageDiffThanOpts.mss  tremolos.massaged.musicxml
tests/data/inputs/reference/musicxml/: notAscii-其れ.massaged.musicxml  notAscii-其れ.no-ottavas-left.musicxml  notAscii-其れ.no-ottavas-right.musicxml
tests/mnx/: test_beams.cpp  test_converter.cpp  test_formatted_text.cpp  test_global.cpp  test_layouts.cpp  test_ottavas.cpp  test_parts.cpp  test_schema.cpp  test_scores.cpp  test_sequences.cpp
tests/musicxml/: musicxml_test.cpp  musicxml_test.h  test_converter.cpp  test_defaults.cpp  test_expressions.cpp  test_metadata.cpp  test_notes.cpp  test_parts.cpp  test_smartshapes.cpp
(+80 files in other folders)
